--- a/frontend/src/pages/results.css
+++ b/frontend/src/pages/results.css
@@ -13,21 +13,27 @@
 }
 
 .overall-score {
-  margin-bottom: 30px;
-}
-
-.overall-score h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+  width: 65%;
+  align-items: center;
+  margin: auto
 }
 
 .overall-score p {
-  font-size: 36px;
-  color: #ff00ff; /* Green color, change as needed */
+  font-size: 40px;
+  font-weight: bold;
+  color: #000000;
+  /* Green color, change as needed */
+  width: 40%;
+  margin: auto;
+  text-align: center;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  font-family: sans-serif;
 }
 
 .category-scores {
   margin-bottom: 30px;
+  margin-top: 100px;
 }
 
 .category-scores h2 {
@@ -73,10 +79,21 @@
   left: 0;
 }
 
-.pie-container .overall-score {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+/* Add the following style to hide the animated percentage within the Pie component */
+.pie-container .overall-score p {
+  opacity: 0;
+}
+
+.overall-score-container {
+  margin-top: 20px;
+  /* Adjust top margin as needed */
+}
+
+.overall-score-text {
+  font-size: 24px;
+  /* Adjust font size as needed */
+  color: #ff00ff;
+  /* Adjust text color as needed */
+  margin: 0;
+  /* Reset margin to 0 to control it in .overall-score-container */
 }
