--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,6 +44,12 @@ header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+#tsparticles {
+  height: 100vh;
+  width: 100vw;
+  z-index: -100;
+}
+
 h1 {
   text-align: center;
   color: #333;
@@ -55,13 +61,14 @@ h1 {
 }
 
 #upload-btn {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 30px 40px;
+  font-size: 24px;
   cursor: pointer;
   border: none;
   background-color: #3db5ff;
+  /* background-color: linear-gradient(0.25turn, #3db5ff, #000000, #FFFFFF); */
   color: #fff;
-  border-radius: 4px;
+  border-radius: 8px;
   transition: background-color 0.2s ease;
 }
 
@@ -69,7 +76,7 @@ h1 {
   background-color: #0099ff;
   /* Change the color on hover */
 }
-
+/* 
 #score-section {
   text-align: center;
 }
@@ -81,7 +88,8 @@ h1 {
 #feedback-list {
   list-style-type: none;
   padding: 0;
-}
+} */
+
 
 .feedback-item {
   margin-bottom: 10px;
